Running build in an attempt to figure out why results don't show.

--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "spur-of-the-moment",
   "version": "0.1.0",
+  "homepage": "https://foxifly.github.io/Udacity-Map-Project",
   "private": true,
   "dependencies": {
     "escape-string-regexp": "^1.0.5",
+    "gh-pages": "^2.0.0",
     "prop-types": "^15.6.2",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
@@ -17,6 +19,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
   }
 }
